Revert "fix: Fix issue with images not appearing on Safari"
This reverts commit fe1e8adfe60d7e0634ac427bac4bfcf9af65ecc2.

--- a/styles/layout/header.css
+++ b/styles/layout/header.css
@@ -21,7 +21,8 @@
         '.......... .......... .......... .......... .......... ..........';
 }
 
-@supports (background-image: -webkit-image-set(url(''))) {
+@supports (background-image: image-set(url(''))) or
+    (background-image: -webkit-image-set(url(''))) {
     .header {
         background-image: linear-gradient(
                 to right bottom,
@@ -30,20 +31,6 @@
             ),
             -webkit-image-set(url('../../images/tiles-sm_1x.jpg') 1x, url('../../images/tiles-sm_2x.jpg')
                         2x);
-    }
-}
-
-@supports (background-image: image-set(url(''))) {
-    .header {
-        background-image: linear-gradient(
-                to right bottom,
-                var(--color-primary-dark-transparent),
-                var(--white-primary-transparent)
-            ),
-            image-set(
-                url('../../images/tiles-sm_1x.jpg') 1x,
-                url('../../images/tiles-sm_2x.jpg') 2x
-            );
     }
 }
 
@@ -143,7 +130,8 @@
             url('../../images/tiles-md_1x.jpg');
     }
 
-    @supports (background-image: -webkit-image-set(url(''))) {
+    @supports (background-image: image-set(url(''))) or
+        (background-image: -webkit-image-set(url(''))) {
         .header {
             background-image: linear-gradient(
                     to right bottom,
@@ -152,20 +140,6 @@
                 ),
                 -webkit-image-set(url('../../images/tiles-md_1x.jpg') 1x, url('../../images/tiles-md_2x.jpg')
                             2x);
-        }
-    }
-
-    @supports (background-image: image-set(url(''))) {
-        .header {
-            background-image: linear-gradient(
-                    to right bottom,
-                    var(--color-primary-dark-transparent),
-                    var(--white-primary-transparent)
-                ),
-                image-set(
-                    url('../../images/tiles-md_1x.jpg') 1x,
-                    url('../../images/tiles-md_2x.jpg') 2x
-                );
         }
     }
 
@@ -189,7 +163,8 @@
             url('../../images/tiles-lg_1x.jpg');
     }
 
-    @supports (background-image: -webkit-image-set(url(''))) {
+    @supports (background-image: image-set(url(''))) or
+        (background-image: -webkit-image-set(url(''))) {
         .header {
             background-image: linear-gradient(
                     to right bottom,
@@ -198,20 +173,6 @@
                 ),
                 -webkit-image-set(url('../../images/tiles-lg_1x.jpg') 1x, url('../../images/tiles-lg_2x.jpg')
                             2x);
-        }
-    }
-
-    @supports (background-image: image-set(url(''))) {
-        .header {
-            background-image: linear-gradient(
-                    to right bottom,
-                    var(--color-primary-dark-transparent),
-                    var(--white-primary-transparent)
-                ),
-                image-set(
-                    url('../../images/tiles-lg_1x.jpg') 1x,
-                    url('../../images/tiles-lg_2x.jpg') 2x
-                );
         }
     }
 }
@@ -247,7 +208,8 @@
             url('../../images/tiles-xl_1x.jpg');
     }
 
-    @supports (background-image: -webkit-image-set(url(''))) {
+    @supports (background-image: image-set(url(''))) or
+        (background-image: -webkit-image-set(url(''))) {
         .header {
             background-image: linear-gradient(
                     to right bottom,
@@ -256,20 +218,6 @@
                 ),
                 -webkit-image-set(url('../../images/tiles-xl_1x.jpg') 1x, url('../../images/tiles-xl_2x.jpg')
                             2x);
-        }
-    }
-
-    @supports (background-image: image-set(url(''))) {
-        .header {
-            background-image: linear-gradient(
-                    to right bottom,
-                    var(--color-primary-dark-transparent),
-                    var(--white-primary-transparent)
-                ),
-                image-set(
-                    url('../../images/tiles-xl_1x.jpg') 1x,
-                    url('../../images/tiles-xl_2x.jpg') 2x
-                );
         }
     }
 
